--- a/MainU.fmx
+++ b/MainU.fmx
@@ -210,13 +210,16 @@ object Form2: TForm2
   end
   object FDConnection1: TFDConnection
     Params.Strings = (
-      'Database=C:\Users\Alan\Desktop\Stats.db'
+      
+        'Database=C:\Users\Alan\Documents\Embarcadero\Studio\Projects\Sta' +
+        'tTest\Win32\Debug\Stats.db'
       'LockingMode=Normal'
       'DriverID=SQLite')
     Connected = True
     LoginPrompt = False
-    Left = 456
-    Top = 192
+    BeforeConnect = FDConnection1BeforeConnect
+    Left = 480
+    Top = 48
   end
   object FDQuery1: TFDQuery
     Active = True
@@ -253,5 +256,14 @@ object Form2: TForm2
     Connection = FDConnection1
     Left = 584
     Top = 296
+  end
+  object FDGUIxWaitCursor1: TFDGUIxWaitCursor
+    Provider = 'FMX'
+    Left = 600
+    Top = 416
+  end
+  object FDPhysSQLiteDriverLink1: TFDPhysSQLiteDriverLink
+    Left = 488
+    Top = 408
   end
 end
