--- a/MainU.XLgXhdpiTb.fmx
+++ b/MainU.XLgXhdpiTb.fmx
@@ -2,8 +2,32 @@ inherited Form2_XLgXhdpiTb: TForm2_XLgXhdpiTb
   ClientHeight = 1255
   ClientWidth = 800
   DesignerMasterStyle = 3
-  inherited WebBrowser1: TWebBrowser
-    Size.Width = 330.000000000000000000
-    Size.Height = 1214.000000000000000000
+  inherited VertScrollBox1: TVertScrollBox
+    Size.Width = 800.000000000000000000
+    Size.Height = 1255.000000000000000000
+    Viewport.Width = 795.000000000000000000
+    Viewport.Height = 1255.000000000000000000
+    inherited GroupBox1: TGroupBox
+      Size.Width = 795.000000000000000000
+    end
+    inherited GroupBox2: TGroupBox
+      Size.Width = 795.000000000000000000
+    end
+    inherited GroupBox3: TGroupBox
+      Size.Width = 795.000000000000000000
+    end
+    inherited GroupBox4: TGroupBox
+      Size.Width = 795.000000000000000000
+    end
+    inherited GroupBox5: TGroupBox
+      Size.Width = 795.000000000000000000
+    end
+    inherited ListView1: TListView
+      Size.Width = 795.000000000000000000
+    end
+    inherited WebBrowser1: TWebBrowser
+      Size.Width = 795.000000000000000000
+      Size.Height = 1255.000000000000000000
+    end
   end
 end
